# NCKU

./: README.md
Analysis_of_Digital_Music_Signal/hw1/: host_graph.filtergraph  hw1.jucer
Analysis_of_Digital_Music_Signal/hw1/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Analysis_of_Digital_Music_Signal/hw1/Source/: Global.cpp  Global.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Analysis_of_Digital_Music_Signal/hw2/: host_graph.filtergraph  mySynth.jucer
Analysis_of_Digital_Music_Signal/hw2/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Analysis_of_Digital_Music_Signal/hw2/Source/: Buffer.cpp  Buffer.h  Controller.cpp  Controller.h  Oscilloscope.cpp  Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Spectrogram.cpp  Spectrogram.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  Util.cpp  Util.h  WaveTable.cpp  WaveTable.h
Introduction_to_Rendering_Methods_Programming_and_Applications/final/: CMakeLists.txt  debug.sh  run.sh
Introduction_to_Rendering_Methods_Programming_and_Applications/final/cmake/: PostBuildCommand.cmake
Introduction_to_Rendering_Methods_Programming_and_Applications/final/resources/: scene.txt  scene_0.txt  scene_1.txt  scene_2.txt  scene_3.txt  scene_sphere.txt
Introduction_to_Rendering_Methods_Programming_and_Applications/final/src/: CMakeLists.txt  main.cpp
Introduction_to_Rendering_Methods_Programming_and_Applications/final/src/engine/: engine.cpp  engine.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp
Introduction_to_Rendering_Methods_Programming_and_Applications/final/src/opengl/: exception.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  window.cpp  window.hpp
Introduction_to_Rendering_Methods_Programming_and_Applications/final/src/scene/: object.cpp  object.hpp  scene.cpp  scene.hpp
Introduction_to_Rendering_Methods_Programming_and_Applications/final/src/shader/: BasicFragmentShader.fs.glsl  BasicVertexShader.vs.glsl
Introduction_to_Rendering_Methods_Programming_and_Applications/hw1/: run.sh
Introduction_to_Rendering_Methods_Programming_and_Applications/hw1/src/: Main.cpp
Introduction_to_Rendering_Methods_Programming_and_Applications/hw2/: algo.py  generate_animation.py  geometry.py  hw2.ui  image.py  main.py  run_animation.sh  run_window.sh  show_animation.py  ui.py  utils.py
Introduction_to_Rendering_Methods_Programming_and_Applications/hw3/: CMakeLists.txt  run.sh
(+39 files in other folders)
